--- a/src/Cms/WebSiteBundle/Resources/views/WebSite/default/settings/imageList.html.twig
+++ b/src/Cms/WebSiteBundle/Resources/views/WebSite/default/settings/imageList.html.twig
@@ -1,7 +1,7 @@
 {% extends '::settings.html.twig' %}
 
  {% block body %}
- <h1>Imga list</h1>
+ <h1>Image list</h1>
 	{% if action == "" %}
 		<ul>
 		{% for img in imgList %}
